--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -1,6 +1,6 @@
 plugins:
   - uses:
-    - plugin: https://ubiquibot-assistive-pricing-development.ubiquity.workers.dev
+    - plugin: http://127.0.0.1:4000
       with:
         labels:
           time:
