--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -22,3 +22,20 @@ plugins:
         publicAccessControl:
           setLabel: true
           fundExternalClosedIssue: false
+
+    - plugin: ishowvel/daemon-disqualifier:compute.yml@development
+      type: github
+      with:
+        disqualification: "2 minutes"
+        warning: "1 minutes"
+        watch:
+          optOut:
+            - "repoName"
+            - "repoName2"
+        eventWhitelist:
+          - "review_requested"
+          - "ready_for_review"
+          - "commented"
+          - "committed"
+    
+
