--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -23,7 +23,7 @@ plugins:
           setLabel: true
           fundExternalClosedIssue: false
 
-    - plugin: ishowvel/daemon-disqualifier:compute.yml@development
+    - plugin: ishowvel/daemon-disqualifier:compute.yml@testing
       type: github
       with:
         disqualification: "2 minutes"
