--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -22,27 +22,24 @@ plugins:
         publicAccessControl:
           setLabel: true
           fundExternalClosedIssue: false
-
-    # - plugin: ishowvel/daemon-disqualifier:compute.yml@testing
-    #   with:
-    #     disqualification: "2 minutes"
-    #     warning: "1 minutes"
-    #     watch:
-    #       optOut:
-    #         - "repoName"
-    #         - "repoName2"
-    #     eventWhitelist:
-    #       - "review_requested"
-    #       - "ready_for_review"
-    #       - "commented"
-    #       - "committed"
-
+  -  uses:
+    - plugin: ishowvel/daemon-disqualifier:compute.yml@testing
+      with:
+        disqualification: "2 minutes"
+        warning: "1 minutes"
+        watch:
+          optOut:
+            - "repoName"
+            - "repoName2"
+        eventWhitelist:
+          - "review_requested"
+          - "ready_for_review"
+          - "commented"
+          - "committed"
+  - uses:
     - plugin: http://localhost:4001 # or the URL where the plugin is hosted
       name: start-stop
       id: start-stop-command
-      description: "Allows a user to start/stop a task without negative XP impact"
-      command: "\/start|\/stop"
-      example: "/start" # or "/stop"
       with:
         reviewDelayTolerance: "3 Days"
         taskStaleTimeoutDuration: "30 Days"
