--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -24,7 +24,7 @@ plugins:
             fundExternalClosedIssue: false
 
   - uses:
-      - plugin: ishowvel/daemon-disqualifier:compute.yml@development
+      - plugin: ishowvel/daemon-disqualifier:compute.yml@testing
         with:
           disqualification: "2 minutes"
           warning: "1 minutes"
@@ -33,10 +33,11 @@ plugins:
               - "repoName"
               - "repoName2"
           eventWhitelist:
-            - "review_requested"
-            - "ready_for_review"
-            - "commented"
-            - "committed"
+            - "pull_request.review_requested"
+            - "pull_request.ready_for_review"
+            - "pull_request_review_comment.created"
+            - "issue_comment.created"
+            - "push"
 
   - uses:
       - plugin: http://localhost:4001 # or the URL where the plugin is hosted
