--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -25,8 +25,8 @@ plugins:
   - uses:
       - plugin: http://localhost:4003
         with:
-          model: "facebook/opt-125m"
-          openAiBaseUrl: "http://busy-monkeys-sort.loca.lt/"
+          anthropicAiModel: "facebook/opt-125m"
+          anthropicAiBaseUrl: "http://busy-monkeys-sort.loca.lt/"
   - uses:
       - plugin: ishowvel/daemon-disqualifier:compute.yml@testing-2
         with:
