--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -93,6 +93,9 @@ plugins:
             userExtractor:
               redeemTask: true
             dataPurge: {}
+            reviewIncentivizer:
+              baseRate: 100
+              conclusiveReviewCredit: 25
             formattingEvaluator:
               wordCountExponent: 0.85
               multipliers:
