--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -23,8 +23,9 @@ plugins:
             setLabel: true
             fundExternalClosedIssue: false
   - uses:
-      - plugin: http://localhost:4003
+      - plugin: ishowvel/daemon-pull-review:compute.yml@development
         name: daemon-pull-precheck
+  
   - uses:
       - plugin: ishowvel/daemon-disqualifier:compute.yml@testing-2
         with:
