--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -23,8 +23,10 @@ plugins:
             setLabel: true
             fundExternalClosedIssue: false
   - uses:
-      - plugin: ishowvel/daemon-pull-review:compute.yml@development
+      - plugin: ishowvel/daemon-pull-review:compute.yml@testing
         name: daemon-pull-precheck
+        with:
+          openRouterAiModel: "google/gemini-2.0-flash-thinking-exp:free"
   
   - uses:
       - plugin: ishowvel/daemon-disqualifier:compute.yml@testing-2
