--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -27,7 +27,7 @@ plugins:
       - plugin: http://localhost:4003
         name: daemon-pull-precheck
         with:
-          openRouterAiModel: "qwen/qwen-2-7b-instruct:free"
+          openRouterAiModel: "meta-llama/llama-3.1-70b-instruct:free"
           tokenLimit: { context:  8000, completion: 300 }
 
   - uses:
