--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -23,8 +23,14 @@ plugins:
             setLabel: true
             fundExternalClosedIssue: false
   - uses:
-      # - plugin: ishowvel/daemon-pull-review:compute.yml@testing
-      - plugin: http://localhost:4003
+      - plugin: ishowvel/daemon-pull-review:compute.yml@testing
+      # - plugin: http://localhost:4003
+        name: daemon-pull-review
+        with:
+          openRouterAiModel: "meta-llama/llama-3.1-70b-instruct:free"
+          tokenLimit: { context:  8000, completion: 300 }
+  - uses:
+      - plugin: http://localhost:4009
         name: command-rewrite
         with:
           openRouterAiModel: "meta-llama/llama-3.1-70b-instruct:free"
