--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -34,7 +34,7 @@ plugins:
       # - plugin: http://localhost:4009
         name: command-rewrite
         with:
-          openRouterAiModel: "nvidia/llama-3.1-nemotron-ultra-253b-v1:free"
+          openRouterAiModel: "nousresearch/deephermes-3-llama-3-8b-preview:free"
 
   - uses:
       - plugin: ishowvel/daemon-disqualifier:compute.yml@testing-2
