--- a/.github/.ubiquity-os.config.dev.yml
+++ b/.github/.ubiquity-os.config.dev.yml
@@ -30,8 +30,8 @@ plugins:
           openRouterAiModel: "meta-llama/llama-3.1-70b-instruct:free"
           tokenLimit: { context:  8000, completion: 300 }
   - uses:
-      - plugin: ishowvel/daemon-spec-rewriter:compute.yml@testing
-      # - plugin: http://localhost:4009
+      # - plugin: ishowvel/daemon-spec-rewriter:compute.yml@testing
+      - plugin: http://localhost:4009
         name: command-rewrite
         with:
           openRouterAiModel: "google/gemini-2.5-pro-exp-03-25:free"
